RESOLVED FIXED302964
[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-overflow/line-clamp/webkit-line-clamp-block-in-inline-001.html
https://bugs.webkit.org/show_bug.cgi?id=302964
Summary [blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-overflow/line-...
alan
Reported 2025-11-21 10:51:07 PST
ssia
Attachments
Patch (4.59 KB, patch)
2025-11-21 10:52 PST, alan
no flags
[fast-cq]Patch (5.55 KB, patch)
2025-11-21 10:59 PST, alan
no flags
alan
Comment 1 2025-11-21 10:52:30 PST
alan
Comment 2 2025-11-21 10:59:49 PST
Created attachment 477467 [details] [fast-cq]Patch
EWS
Comment 3 2025-11-21 14:55:07 PST
Committed 303423@main (974846aa8ea1): <https://commits.webkit.org/303423@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477467 [details].
Radar WebKit Bug Importer
Comment 4 2025-11-21 14:56:12 PST
Note You need to log in before you can comment on or make changes to this bug.