[blocks-in-inline] Fix imported/w3c/web-platform-tests/css/css-overflow/line-clamp/webkit-line-clamp-block-in-inline-001.html https://bugs.webkit.org/show_bug.cgi?id=302964

Reviewed by Antti Koivisto.

Ellipsis should be added only to lines with inline content and not to their "block parent" line.

Test: fast/inline/blocks-in-inline-with-legacy-line-clamp3.html

* LayoutTests/fast/inline/blocks-in-inline-with-legacy-line-clamp3-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-with-legacy-line-clamp3.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::createDisplayContentForInlineContent):

Canonical link: https://commits.webkit.org/303423@main